[metadata]
name= "krabbe"
version= "0.0.1"
license= "GPLv3"
description= "A CLI text adventure game engine for Python3 with support for Lua plugins."
long_description= file: README.rst
author= "tagon35"
author_email= "tagon35@proton.me"
classifiers=
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Lua

    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Lua Modules
    Topic :: Software Development :: Libraries :: Game Development

[options]
packages= find:
package_dir = 
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src